--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
 
     implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "com.google.code.gson:gson:2.8.5"
+
+    implementation 'com.github.medyo:fancybuttons:1.9.1'
 }
