--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
+
+    dataBinding {
+        enabled = true
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -16,6 +21,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.timenoteco.timenote"
         minSdkVersion 19
         targetSdkVersion 29
@@ -60,7 +66,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
@@ -71,4 +77,8 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.5"
 
     implementation 'com.github.medyo:fancybuttons:1.9.1'
+    implementation  'com.dialog:plus:4.1.4'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
+    kapt 'com.android.databinding:compiler:3.2.0-alpha10'
 }
