--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,5 @@ dependencies {
     implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.3'
 
     implementation "com.paulrybitskyi.persistentsearchview:persistentsearchview:1.1.2"
-
-
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
 }
