--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,8 +85,9 @@ dependencies {
 
     implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.3'
 
-    implementation "com.paulrybitskyi.persistentsearchview:persistentsearchview:1.1.2"
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
 
-    implementation 'com.github.noowenz:CustomDateTimePicker:1.01'
+    implementation 'com.afollestad.material-dialogs:datetime:3.3.0'
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
+    implementation 'com.afollestad.material-dialogs:lifecycle:3.3.0'
 }
