--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,8 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:color:3.3.0'
 
     implementation 'com.github.anugotta:FlipTimerView:v1.5'
-    implementation 'com.github.takusemba:cropme:2.0.5'
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
 
 }
