--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
@@ -96,6 +96,6 @@ dependencies {
     implementation 'com.github.anugotta:FlipTimerView:v1.5'
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
-
+    compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 
 }
