--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,5 +97,8 @@ dependencies {
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    implementation 'com.asksira.android:bsimagepicker:1.3.2'
+    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'me.relex:circleindicator:2.1.4'
 
 }
