--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,5 +100,7 @@ dependencies {
     implementation 'com.asksira.android:bsimagepicker:1.3.2'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'me.relex:circleindicator:2.1.4'
+    implementation 'com.googlecode.json-simple:json-simple:1.1'
+
 
 }
