--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
         enabled = true
     }
 
+    useLibrary 'org.apache.http.legacy'
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -101,6 +103,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
+    implementation 'com.loopj.android:android-async-http:1.4.5'
 
+    implementation 'com.google.apis:google-api-services-customsearch:v1-rev51-1.22.0'
 
 }
