--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
 
@@ -95,15 +96,10 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
     implementation 'com.afollestad.material-dialogs:color:3.3.0'
 
-    implementation 'com.github.anugotta:FlipTimerView:v1.5'
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
-    compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'com.asksira.android:bsimagepicker:1.3.2'
-    implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'me.relex:circleindicator:2.1.4'
-    implementation 'com.googlecode.json-simple:json-simple:1.1'
-    implementation 'com.loopj.android:android-async-http:1.4.5'
 
     implementation 'com.google.apis:google-api-services-customsearch:v1-rev51-1.22.0'
 
