--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
 
     implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "com.google.code.gson:gson:2.8.5"
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
 
     implementation 'com.github.medyo:fancybuttons:1.9.1'
     implementation 'com.dialog:plus:4.1.4'
