--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:lifecycle:3.3.0'
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
     implementation 'com.afollestad.material-dialogs:color:3.3.0'
+    implementation 'me.samlss:broccoli:1.0.0'
 
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
