--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.asksira.android:bsimagepicker:1.3.2'
     implementation 'me.relex:circleindicator:2.1.4'
+    implementation 'io.branch.sdk.android:library:4.+'
 
     implementation 'com.google.apis:google-api-services-customsearch:v1-rev51-1.22.0'
 
