--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        tools:replace="android:name"
         android:windowSoftInputMode="adjustResize"
         android:name="io.branch.referral.BranchApp"
         android:networkSecurityConfig="@xml/network_security_config"
