--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,6 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     compileOptions {
-        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -109,10 +108,11 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'io.branch.sdk.android:library:4.+'
 
-    implementation 'com.amplifyframework:core:1.1.2'
-    implementation 'com.amplifyframework:aws-datastore:1.1.2'
-    implementation 'com.amplifyframework:aws-api:1.1.2'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.2.+'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
 
     implementation 'com.google.apis:google-api-services-customsearch:v1-rev51-1.22.0'
 
