--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:lifecycle:3.3.0'
     implementation 'com.afollestad.material-dialogs:color:3.3.0'
     implementation 'me.samlss:broccoli:1.0.0'
+    implementation 'joda-time:joda-time:2.10.6'
 
     implementation 'com.felipecsl.asymmetricgridview:library:2.0.1'
 
