--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,15 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    signingConfigs {
+        config {
+            keyAlias 'DayzeeKeyStore'
+            keyPassword 'Dayzee26!'
+            storeFile file('../../../../samuelzaffran/DayzeeKeyStore')
+            storePassword 'Dayzee26!'
+        }
+    }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
@@ -28,8 +37,8 @@ android {
         applicationId "com.timenoteco.timenote"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 19
-        versionName "19.0"
+        versionCode 23
+        versionName "23.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,8 +47,17 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -98,13 +116,13 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
     implementation 'com.afollestad.material-dialogs:lifecycle:3.3.0'
     implementation 'com.afollestad.material-dialogs:color:3.3.0'
-    implementation 'me.samlss:broccoli:1.0.0'
-    implementation 'joda-time:joda-time:2.10.6'
 
     implementation 'com.felipecsl.asymmetricgridview:library:2.0.1'
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
-    implementation 'com.asksira.android:bsimagepicker:1.3.2'
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+    implementation 'com.zhihu.android:matisse:0.5.3-beta3'
+
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'io.branch.sdk.android:library:4.+'
 
