--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_dayzee_generated"
         android:label="@string/app_name"
         android:windowSoftInputMode="adjustResize"
         android:name="com.timenoteco.timenote.customApplicationClass"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_dayzee_generated_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="q">
@@ -82,6 +82,9 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
 
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_stat_notif" />
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
