--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_dayzee_generated"
         android:label="@string/app_name"
-        android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
         android:name="com.timenoteco.timenote.customApplicationClass"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_dayzee_generated_round"
@@ -37,7 +36,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="adjustResize"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"
