--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding true
     }
 
     useLibrary 'org.apache.http.legacy'
