--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,10 @@ dependencies {
     }
 
     implementation "androidx.camera:camera-camera2:1.1.0-alpha02"
+
+    implementation "com.hendraanggrian.appcompat:socialview:0.1-SNAPSHOT"
+    implementation "com.hendraanggrian.appcompat:socialview-commons:0.1-SNAPSHOT"
+
     // Kotlin + coroutines
     implementation "androidx.work:work-runtime-ktx:2.5.0"
 
