--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'}
         google()
         jcenter()
         mavenCentral()
