--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 
 buildscript {
     ext.kotlin_version = '1.4.31'
@@ -26,7 +26,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url = 'https://jitpack.io' }
     }
 }
 
