--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,14 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('/Users/samuelzaffran/DayzeeKeyStore')
+            storePassword 'Dayzee26!'
+            keyAlias 'DayzeeKeyStore'
+            keyPassword 'Dayzee26!'
+        }
+    }
     compileSdkVersion 29
     buildFeatures {
         viewBinding true
@@ -30,11 +38,12 @@ android {
         multiDexEnabled true
         applicationId "com.dayzeeco.dayzee"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 14
-        versionName "1.8"
+        targetSdkVersion 32
+        versionCode 19
+        versionName "2.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
 
     buildTypes {
@@ -88,6 +97,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
