--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,5 +148,6 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.1.0-alpha02"
     // Kotlin + coroutines
     implementation "androidx.work:work-runtime-ktx:2.5.0"
+    implementation 'com.appsflyer:af-android-sdk:6.3.2'
 
 }
