--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,10 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://jitpack.io' }    }
+        maven {
+            url 'https://jitpack.io'
+        }
+    }
 }
 
 task clean(type: Delete) {
