--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+
+    configurations{
+        all*.exclude module : 'bcprov-jdk15on'
+    }
     signingConfigs {
         config {
             storeFile file('/Users/samuelzaffran/DayzeeKeyStore')
@@ -37,7 +41,7 @@ android {
     defaultConfig {
         multiDexEnabled true
         applicationId "com.dayzeeco.dayzee"
-        minSdkVersion 21
+        minSdk 28
         targetSdkVersion 32
         versionCode 19
         versionName "2.3"
@@ -64,6 +68,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':moralis-lib')
     def nav_version = "2.3.3"
     def lifecycle_version = "2.3.0"
 
@@ -75,7 +80,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -146,6 +151,6 @@ dependencies {
     }
 
     implementation "androidx.camera:camera-camera2:1.1.0-alpha02"
-    // Kotlin + coroutines
     implementation 'com.appsflyer:af-android-sdk:6.3.2'
+
 }
