--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ android {
         applicationId "com.dayzeeco.dayzee"
         minSdk 28
         targetSdkVersion 32
-        versionCode 19
-        versionName "2.3"
+        versionCode 20
+        versionName "2.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.config
@@ -152,5 +152,6 @@ dependencies {
 
     implementation "androidx.camera:camera-camera2:1.1.0-alpha02"
     implementation 'com.appsflyer:af-android-sdk:6.3.2'
+    implementation 'it.sephiroth.android.library:number-sliding-picker:1.1.1'
 
 }
