--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,5 +153,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.1.0-alpha02"
     implementation 'com.appsflyer:af-android-sdk:6.3.2'
     implementation 'it.sephiroth.android.library:number-sliding-picker:1.1.1'
+    implementation "com.google.android.exoplayer:exoplayer:2.11.1"
+    implementation 'com.danikula:videocache:2.7.1'
+    implementation 'com.github.AbedElazizShe:LightCompressor:1.1.1'
 
 }
