--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_dayzee_generated"
         android:label="@string/app_name"
-        android:name="com.dayzeeco.dayzee.customApplicationClass"
+        android:name="com.dayzeeco.dayzee.CustomApplicationClass"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_dayzee_generated_round"
         android:supportsRtl="true"
