--- a/picture_library/build.gradle
+++ b/picture_library/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.1.0-alpha01"
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
     implementation "androidx.camera:camera-view:1.0.0-alpha21"
+    implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
 
 }
