--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,6 @@ android {
 
 dependencies {
 
-    implementation project(path: ':moralis-lib')
     def nav_version = "2.3.3"
     def lifecycle_version = "2.3.0"
 
@@ -159,5 +158,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.0'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
+
+    implementation 'dev.pinkroom:walletconnectkit:0.3.2'
 
 }
